[tool.poetry]
name = "cache"
version = "0.1.0"
readme = "README.md"
description = "Flexible caching library built on dogpile.cache"
repository = "https://github.com/bissli/cache.git"
authors = ["bissli"]
license = "0BSD"
packages = [{ include = "cache", from = 'src' }]

[tool.poetry.dependencies]
python = "^3.10"
database = { git = "https://github.com/bissli/database" }
"dogpile.cache" = "*"
func-timeout = "*"
redis = { version = "*", optional = true }

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
